--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6d8c8057-4418-4ab5-847b-5b465000abff"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
